# data-fabric

./: .env.example  .gitignore  .local-ci.toml  .setup-verification.sh  CLAUDE.md  Cargo.toml  Containerfile  DEPLOYMENT_STATUS.md  GEMINI_API_SETUP.md  GEMINI_CLI_SETUP_COMPLETE.md  Makefile  QUICK_START.md  README.md  README_DEPLOYMENT.md  REMOTE_DEPLOYMENT.md  SETUP_COMPLETE.md  deploy-remote.sh  docker-compose.yml  flake.nix  justfile  package.json  wrangler.toml
.github/workflows/: ci.yml  dep-scan.yml  deploy.yml  rust-coverage.yml
data-fabric-client/: Cargo.toml
data-fabric-client/src/: lib.rs  types.rs
data-fabric-client/tests/: client_tests.rs
data-fabric-repo/: Cargo.toml
data-fabric-repo/src/: d1.rs  error.rs  lib.rs  r2.rs  repository.rs  retry.rs
dfctl/: Cargo.toml
dfctl/src/: main.rs
docs/: ARCHITECTURE.md  CONTRIBUTING_WORKFLOW.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_READY.md  INTEGRATION_OXIDIZEDGRAPH.md  LOCAL_CI_VALIDATION.md  LOCAL_DEPLOYMENT.md  MEMORY_AUGMENTED_TASKS.md  MISSION_PLAN.md  OCI_DEPLOYMENT.md  REASONING_TRACES.md  TDD-BUN-BUNX-EXECUTION-PLAN.md  TDD-MIGRATION-NODE-NPM-TO-BUN-BUNX.md  TDD_HIGH_IMPACT_EXECUTION_PLAN.md  TESTING_MOM_INTEGRATION.md  WS4_POLICY_GOVERNANCE.md  WS5_RETRIEVAL_MEMORY.md  ws6-integrations-openapi.yaml
docs/adr/: 0000-template.md  0001-event-ordering-strategy.md  0002-policy-engine-placement.md  0003-memory-index-backend.md  BACKLOG.md  README.md
docs/ws1/: ARCHITECTURE_SEED.md  CAPABILITY_GAP_MAP.md  MIGRATION_RISK_REGISTER.md  README.md  SOURCE_INVENTORY_MATRIX.md  WS1A_MODULE_MIGRATION_ASSESSMENT.md
docs/ws10/: METRICS_ENDPOINT.md  README.md  (+1 more)
mcp-server/: GEMINI_CLI_INTEGRATION.md  README.md  data-fabric-mcp.js  gemini-extension.json  package.json
migrations/: 0001_silver_entities.sql  0001_ws2_domain_model.sql  0002_m1_m3_agent_infra.sql  0002_orchestration.sql  0003_ws3_provenance.sql  0003_ws5_memory_retrieval.sql  0004_integrations.sql  0004_ws3_provenance_complete.sql  0004_ws4_policy_engine.sql  0004_ws4_policy_rules.sql  0004_ws5_memory.sql  0005_ws8_multi_tenant.sql  0006_integrations.sql  0007_ws3_gold_layer.sql  0008_ws5_memory_tenant.sql  0009_run_summaries_tenant.sql  0010_ws7_verification_evidence.sql  0011_telemetry_snapshots.sql  0012_play_definitions.sql  0013_gemini_batch_jobs.sql  0013_reasoning_traces.sql  0014_ws8_tenant_id_addendum.sql  0015_aivcs_change_set.sql  0015_aivcs_pull_requests.sql  0016_aivcs_review_projections.sql  0017_aivcs_human_decision.sql  0018_runs_status_column.sql  0019_aivcs_ci_check_run.sql  0020_aivcs_branches.sql  0021_aivcs_review_projections_by_pr.sql  0022_aivcs_cmdb_and_incident.sql
scripts/: build-worker.sh  e2e-integration-smoke.sh  pilot-latency.sh  pilot-smoke.sh  test-mom-integration.sh  verify-local-ci-sync.sh
src/: db.rs  errors.rs  gemini_service.rs  integrations.rs  lib.rs  metrics.rs  models.rs  openapi.rs  pagination.rs  play_do.rs  policy.rs  storage.rs  task_do.rs  tenant.rs  tenant_security.rs  thread_do.rs  trace_sink.rs  vector_index.rs  verification.rs
(+17 files in other folders)
