[package]
name = "data-fabric-worker"
version = "0.1.0"
edition = "2021"
authors = ["Stevedores Org"]
license = "Apache-2.0"
repository = "https://github.com/stevedores-org/data-fabric"
description = "Cloudflare-native data fabric for autonomous AI agent builder orchestration"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.4"
worker-macros = "0.7.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
